@@ -1,6 +1,7 @@
 Revision history for Perl extension Text-Sass-XS
 
 {{$NEXT}}
+    - Adds some definitions to .xs suggested by ppport.h
 
 0.08 2013-06-20T02:14:21Z
     - Uses base.pm instead of parent.pm in builder/MyBuilder.pm.
